// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`POST /api/admin/editService/:serviceId > Returns 400 with invalid service config data 1`] = `
[
  {
    "location": "body",
    "msg": "Value must be a valid ISO 8601 duration",
    "param": "serviceConfig.checkInterval",
    "value": "3Y6M4DT12H30M5S",
  },
  {
    "location": "body",
    "msg": "Value must be a valid ISO 8601 duration",
    "param": "serviceConfig.scheduledRunInterval",
    "value": "3Y6M4DT12H30M5S",
  },
]
`;

exports[`POST /api/admin/editService/:serviceId > Returns 400 with invalid service config data 2`] = `
[
  {
    "location": "body",
    "msg": "Value must be a valid ISO 8601 duration",
    "param": "serviceConfig.checkInterval",
    "value": "T12H30M5S",
  },
  {
    "location": "body",
    "msg": "Value must be a valid ISO 8601 duration",
    "param": "serviceConfig.scheduledRunInterval",
    "value": "T12H30M5S",
  },
]
`;

exports[`POST /api/admin/editService/:serviceId > Returns 400 with invalid service config data 3`] = `
[
  {
    "location": "body",
    "msg": "scheduledRunLimit must be between 1 and 100",
    "param": "serviceConfig.scheduledRunLimit",
    "value": "a",
  },
]
`;

exports[`POST /api/admin/editService/:serviceId > Returns 400 with invalid service config data 4`] = `
[
  {
    "location": "body",
    "msg": "scheduledRunLimit must be between 1 and 100",
    "param": "serviceConfig.scheduledRunLimit",
    "value": 101,
  },
]
`;

exports[`POST /api/admin/editService/:serviceId > Returns 400 with invalid service config data 5`] = `
[
  {
    "location": "body",
    "msg": "scheduledRunLimit must be between 1 and 100",
    "param": "serviceConfig.scheduledRunLimit",
    "value": 0,
  },
]
`;
